# dispatcher

./: .gitignore  CMakeLists.txt  README.md
examples/: defer_pool.cpp  defer_runner.cpp  evt_runner.cpp  task_group.cpp  task_runner.cpp
include/: defer_pool.h  defer_runner.h  evt_runner.h  safe_queue.h  task_group.h  task_runner.h
toy/: task_pool.cpp  task_pool.h  wsq.h
toy/wsq/: _wsq.cpp  _wsq.h
